--- a/code/99_bot/jiakbot/config_app/app_config.ini
+++ b/code/99_bot/jiakbot/config_app/app_config.ini
@@ -6,12 +6,9 @@ response_greetings = ./jiakbot/corpus/response_greetings.json
 response_about = ./jiakbot/corpus/response_about.json
 response_general = ./jiakbot/corpus/response_general.json
 response_for_business = ./jiakbot/corpus/response_for_business.json
-
-[topic_trainer]
-reviews_db = ../../database/jiakbot.db
-out_base = ../../corpus/reviews
-training_doc_limit =
-train_logs = ./logs
-force_write = 0
-num_topics = 150
-lda_passes = 2
+question_clf = ./jiakbot/jiak_models/question_model.pkl
+location = ./jiakbot/corpus/knowledge/locations.txt
+cuisine = ./jiakbot/corpus/knowledge/cuisines.txt
+food = ./jiakbot/corpus/knowledge/foods.txt
+non_food = ./jiakbot/corpus/knowledge/non_foods.txt
+db_path = ./jiakbot/database/jiakbot.db
