--- a/code/99_bot/jiakbot/config_app/app_config.ini
+++ b/code/99_bot/jiakbot/config_app/app_config.ini
@@ -12,3 +12,18 @@ cuisine = ./jiakbot/corpus/knowledge/cuisines.txt
 food = ./jiakbot/corpus/knowledge/foods.txt
 non_food = ./jiakbot/corpus/knowledge/non_foods.txt
 db_path = ./jiakbot/database/jiakbot.db
+
+[yangcheng]
+input_yes_or_no = ./jiakbot/corpus/input_yes_or_no.json
+input_about = ./jiakbot/corpus/input_about.json
+response_yes_no = ./jiakbot/corpus/response_yes_no.json
+response_greetings = ./jiakbot/corpus/response_greetings.json
+response_about = ./jiakbot/corpus/response_about.json
+response_general = ./jiakbot/corpus/response_general.json
+response_for_business = ./jiakbot/corpus/response_for_business.json
+question_clf = ./jiakbot/jiak_models/question_model.pkl
+location = ./jiakbot/corpus/knowledge/locations.txt
+cuisine = ./jiakbot/corpus/knowledge/cuisines.txt
+food = ./jiakbot/corpus/knowledge/foods.txt
+non_food = ./jiakbot/corpus/knowledge/non_foods.txt
+db_path = ./jiakbot/database/jiakbot.db
