updated bot recommender

--- a/code/99_bot/jiakbot/config_app/app_config.ini
+++ b/code/99_bot/jiakbot/config_app/app_config.ini
@@ -11,7 +11,9 @@ location = ./jiakbot/corpus/knowledge/locations.txt
 cuisine = ./jiakbot/corpus/knowledge/cuisines.txt
 food = ./jiakbot/corpus/knowledge/foods.txt
 non_food = ./jiakbot/corpus/knowledge/non_foods.txt
-db_path = ./jiakbot/database/jiakbot.db
+db_path = /Users/junquantham/Development/saproject/data/foursquare.db
+g_path = /Users/junquantham/Development/saproject/data/graph_objects/g.sav
+g_recent_path = /Users/junquantham/Development/saproject/data/graph_objects/g_recent.sav
 
 [yangcheng]
 input_yes_or_no = D:/Workspace-Github/saproject/code/99_bot/jiakbot/corpus/input_yes_or_no.json
