--- a/code/99_bot/jiakbot/config_app/app_config.ini
+++ b/code/99_bot/jiakbot/config_app/app_config.ini
@@ -29,3 +29,5 @@ cuisine = D:/Workspace-Github/saproject/code/99_bot/jiakbot/corpus/knowledge/cui
 food = D:/Workspace-Github/saproject/code/99_bot/jiakbot/corpus/knowledge/foods.txt
 non_food = D:/Workspace-Github/saproject/code/99_bot/jiakbot/corpus/knowledge/non_foods.txt
 db_path = D:/Workspace-Github/saproject/data/foursquare.db
+g_path = D:/Workspace-Github/saproject/data/graph_objects/g.sav
+g_recent_path = D:/Workspace-Github/saproject/data/graph_objects/g_recent.sav
